new proj/src/objects/Support_Request_Role_Members__c.object
<CustomObject>
    <fields>
        <fullName>GE_Attach_ARC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach ARC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing-FMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing-Druck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Alexandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Salt Lake City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - PNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT- Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Deer Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Business_or_Region__c</fullName>
        <label>Business or Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Combination_Number__c</fullName>
        <externalId>true</externalId>
        <label>Combination Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Custom_Invoice_Notification_Name__c</fullName>
        <label>Custom Invoice Notification - Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Custom_Invoice_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Invoice Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request_Role_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Customs_Invoice__c</fullName>
        <label>Customs Invoice?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Department__c</fullName>
        <description>Used for the Government workflow</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Manager_Name__c</fullName>
        <label>Finance Manager - Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request_Role_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Team_Member_Name__c</fullName>
        <label>Finance Team Member - Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request_Role_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Functional_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the Government support request</description>
        <label>Functional Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request_Role_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_IBS_Order__c</fullName>
        <label>IBS Order?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Invoice_tied_to_an_ARC__c</fullName>
        <label>Invoice tied to an ARC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Product_Service_Type__c</fullName>
        <label>Product/Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel/Rebill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Support Request Role Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Government</fullName>
        <columns>NAME</columns>
        <columns>GE_Department__c</columns>
        <columns>GE_Business_Unit__c</columns>
        <columns>GE_Functional_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request_Role_Members__c.Government</value>
        </filters>
        <label>All Government</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GE_MCS_All_Cancel_Rebill</fullName>
        <columns>GE_Request_Type__c</columns>
        <columns>GE_Reason_Code__c</columns>
        <columns>GE_Business_or_Region__c</columns>
        <columns>GE_Product_Service_Type__c</columns>
        <columns>GE_IBS_Order__c</columns>
        <columns>GE_Customs_Invoice__c</columns>
        <columns>GE_Invoice_tied_to_an_ARC__c</columns>
        <columns>GE_Finance_Team_Member__c</columns>
        <columns>GE_Finance_Team_Member_Name__c</columns>
        <columns>GE_Custom_Invoice_Notification__c</columns>
        <columns>GE_Custom_Invoice_Notification_Name__c</columns>
        <columns>NAME</columns>
        <columns>GE_Combination_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request_Role_Members__c.Cancel_Rebill</value>
        </filters>
        <label>All Cancel Rebill</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SRRM-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Request Role Members</pluralLabel>
    <recordTypes>
        <fullName>Cancel_Rebill</fullName>
        <active>true</active>
        <description>Used for the Cancel/Rebill support request</description>
        <label>Cancel Rebill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Used for the Government support request</description>
        <label>Government</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>